@BruRaptor [Encomendei-ComRotas]

--- a/src/app/fone/fone.component.html
+++ b/src/app/fone/fone.component.html
@@ -1,1 +1,98 @@
-<p>fone works!</p>
+<body id="fone">
+
+<section class="d-flex flex-row flex-wrap text-center justify-content-center p-3">
+
+  <div class="card m-lg-2" style="width: 14rem;">
+  <img src="https://i.imgur.com/OnHkDSR.jpg" class="card-img-top border border-primary" alt="...">
+  <div class="card-body">
+    <h5 class="card-title">Redmi Airdots s</h5>
+    <p class="card-text">Fone Redmi Airdots TWS 5.0 Airdots Wireless Bluetooth.</p>
+    <p class="font-weight-bolder">R$ 80,00 Reais</p>
+    <a href="https://wa.me/qr/C6K3SDPTU7OVO1" target="_black" class="btn btn-success">Encomendar</a>
+  </div>
+</div>
+
+<div class="card m-lg-2" style="width: 14rem;">
+  <img src="https://i.imgur.com/mTlS4vX.jpg" class="card-img-top border border-primary" alt="...">
+  <div class="card-body">
+    <h5 class="card-title">Fone Bluetooth AirPods 115</h5>
+    <p class="card-text">Fone AirPods 115 Wireless excelente, compátivel com android.</p>
+    <p class="font-weight-bolder">R$ 110,00 Reais</p>
+    <a href="https://wa.me/qr/C6K3SDPTU7OVO1" target="_black" class="btn btn-success">Encomendar</a>
+  </div>
+</div>
+
+<div class="card m-lg-2" style="width: 14rem;">
+  <img src="https://i.imgur.com/xfgT2H3.jpg" class="card-img-top border border-primary" alt="...">
+  <div class="card-body">
+    <h5 class="card-title">Fone Bluetooth 112</h5>
+    <p class="card-text">Fone 112 Wireless pequeno simples e elegante.</p>
+    <p class="font-weight-bolder">R$ 76,00 Reais</p>
+    <a href="https://wa.me/qr/C6K3SDPTU7OVO1" target="_black" class="btn btn-success">Encomendar</a>
+  </div>
+</div>
+
+<div class="card m-lg-2" style="width: 14rem;">
+  <img src="https://i.imgur.com/5SfTMUW.jpg" class="card-img-top border border-primary" alt="...">
+  <div class="card-body">
+    <h5 class="card-title">Fone Bluetooth 117</h5>
+    <p class="card-text">Fone 117 Wireless com base carregadora.</p>
+    <p class="font-weight-bolder">R$ 100,00 Reais</p>
+    <a href="https://wa.me/qr/C6K3SDPTU7OVO1" target="_black" class="btn btn-success">Encomendar</a>
+  </div>
+</div>
+
+<div class="card m-lg-2" style="width: 14rem;">
+  <img src="https://i.imgur.com/YqNHRcB.jpg+" class="card-img-top border border-primary" alt="...">
+  <div class="card-body">
+    <h5 class="card-title">Fone Bluetooth AirDods 124</h5>
+    <p class="card-text">Fone 124 Wireless excelente qualidade.</p>
+    <p class="font-weight-bolder">R$ 82,00 Reais</p>
+    <a href="https://wa.me/qr/C6K3SDPTU7OVO1" target="_black" class="btn btn-success">Encomendar</a>
+  </div>
+</div>
+
+<div class="card m-lg-2" style="width: 14rem;">
+  <img src="https://i.imgur.com/HSbChaV.jpg" class="card-img-top border border-primary" alt="...">
+  <div class="card-body">
+    <h5 class="card-title">Fone Bluetooth 136</h5>
+    <p class="card-text">Fone 136 Wireless pequeno simples e elegante.</p>
+    <p class="font-weight-bolder">R$ 80,00 Reais</p>
+    <a href="https://wa.me/qr/C6K3SDPTU7OVO1" target="_black" class="btn btn-success">Encomendar</a>
+  </div>
+</div>
+
+<div class="card m-lg-2" style="width: 14rem;">
+  <img src="https://i.imgur.com/wad3fbI.jpg" class="card-img-top border border-primary" alt="...">
+  <div class="card-body">
+    <h5 class="card-title">Fone Bluetooth JBL</h5>
+    <p class="card-text">Fone JBL TWS Bluetooth 5.0 qualidade que só a JBL tem.</p>
+    <p class="font-weight-bolder">R$ 90,00 Reais</p>
+    <a href="https://wa.me/qr/C6K3SDPTU7OVO1" target="_black" class="btn btn-success">Encomendar</a>
+  </div>
+</div>
+
+
+<div class="card m-lg-2" style="width: 14rem;">
+  <img src="https://i.imgur.com/E3DbMzP.jpg" class="card-img-top border border-primary" alt="...">
+  <div class="card-body">
+    <h5 class="card-title">Fone Samsung</h5>
+    <p class="card-text">Fone de ouvido Samsung com fio ótima qualidade.</p>
+    <p class="font-weight-bolder">R$ 15,00 Reais</p>
+    <a href="https://wa.me/qr/C6K3SDPTU7OVO1" target="_black" class="btn btn-success">Encomendar</a>
+  </div>
+</div>
+
+
+<div class="card m-lg-2" style="width: 14rem;">
+  <img src="https://i.imgur.com/C5syJJR.jpg" class="card-img-top border border-primary" alt="...">
+  <div class="card-body">
+    <h5 class="card-title">Fone de Ouvido Intra-Auricular</h5>
+    <p class="card-text">Fone de ouvido Intra-Auricular ótima qualidade.</p>
+    <p class="font-weight-bolder">R$ 15,00 Reais</p>
+    <a href="https://wa.me/qr/C6K3SDPTU7OVO1" target="_black" class="btn btn-success">Encomendar</a>
+  </div>
+</div>
+
+</section>
+</body>
