--- a/src/app/outro/outro.component.html
+++ b/src/app/outro/outro.component.html
@@ -1,1 +1,13 @@
-<p>outro works!</p>
+<section class="d-flex flex-row flex-wrap text-center justify-content-center p-3">
+
+  <div class="card m-lg-2" style="width: 14rem;">
+    <img src="https://i.imgur.com/9tdxrEP.jpg" class="card-img-top border border-primary" alt="...">
+    <div class="card-body">
+      <h5 class="card-title">Chaveiros de Borracha</h5>
+      <p class="card-text">Chaveiros feitos com borracha de alta qualidade excelente acabamento.</p>
+      <p class="font-weight-bolder">R$ 5,00 Reais</p>
+      <a href="https://wa.me/qr/C6K3SDPTU7OVO1" target="_black" class="btn btn-success">Encomendar</a>
+    </div>
+  </div>
+
+</section>
