--- a/src/app/rodape/rodape.component.html
+++ b/src/app/rodape/rodape.component.html
@@ -1,1 +1,29 @@
-<p>rodape works!</p>
+<footer class="page-footer font-small bg-primary pt-4">
+  <div class="container">
+    <div class="row">
+      <div class="col-md-12 d-flex justify-content-center">
+        <h4 class="text-white">Siga-nos das redes sociais</h4>
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="col-md-12 d-flex justify-content-center">
+        <ul class="social-network">
+          <li>
+            <a href="https://www.facebook.com/brutechofc" target="_blank" class="icofacebook font-weight-bolder">Facebook
+            </a>
+          </li>
+          <li>
+            <a href="https://www.instagram.com/brutechofc/" target="_blank" class="icogithub font-weight-bolder">Instagram
+            </a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </div>
+  <div class="footer-copyright bg-info text-center py-3">
+      <span class="text-light">© 2022 Copyright: </span>
+      <a class="text-light" target="_blank" href="">Bruno.</a>
+
+  </div>
+</footer>
