@BruRaptor [Encomendei-Rotas e imagens]

--- a/src/app/acessorios/acessorios.component.html
+++ b/src/app/acessorios/acessorios.component.html
@@ -1,7 +1,7 @@
 <section class="col-12 d-flex flex-row flex-wrap text-center justify-content-center p-3">
 
-  <div class="card m-lg-2" style="width: 14rem;">
-    <img src="https://i.imgur.com/xf3fvJh.jpg" class="card-img-top border border-primary" alt="...">
+  <div class="card" style="width: 16rem;">
+    <img src="https://i.imgur.com/xf3fvJh.jpg" class="card-img-top" alt="...">
     <div class="card-body">
       <h5 class="card-title">Power Bank 5000mah</h5>
       <p class="card-text">Carregador Portátil 5000mah de capacidade uma entrada USB cabo embutido e três pontas de carregamento.</p>
@@ -10,8 +10,8 @@
     </div>
   </div>
 
-  <div class="card m-lg-2" style="width: 14rem;">
-    <img src="https://i.imgur.com/4WthIZT.jpg" class="card-img-top border border-primary" alt="...">
+  <div class="card" style="width: 16rem;">
+    <img src="https://i.imgur.com/4WthIZT.jpg" class="card-img-top" alt="...">
     <div class="card-body">
       <h5 class="card-title">Power Bank 10000mah</h5>
       <p class="card-text">Carregador Portátil 10000mah de capacidade uma entrada USB cabo embutido e três pontas de carregamento.</p>
@@ -20,18 +20,18 @@
     </div>
   </div>
 
-  <div class="card m-lg-2" style="width: 14rem;">
-    <img src="https://i.imgur.com/pW5duGq.jpg" class="card-img-top border border-primary" alt="...">
+  <div class="card" style="width: 16rem;">
+    <img src="https://i.imgur.com/pW5duGq.jpg" class="card-img-top" alt="...">
     <div class="card-body">
       <h5 class="card-title">Power Bank 20000mah</h5>
-      <p class="card-text">Carregador Portátil 20000mah de capacidade duas entradas USB uma tipo-C.</p>
+      <p class="card-text">Carregador Portátil 20000mah de capacidade duas entradas USB e uma tipo-C.</p>
       <p class="font-weight-bolder">R$ 200,00 Reais</p>
       <a href="https://wa.me/qr/C6K3SDPTU7OVO1" target="_black" class="btn btn-success">Encomendar</a>
     </div>
   </div>
 
-  <div class="card m-lg-2" style="width: 14rem;">
-    <img src="https://i.imgur.com/iBUunmf.jpg" class="card-img-top border border-primary" alt="...">
+  <div class="card" style="width: 16rem;">
+    <img src="https://i.imgur.com/iBUunmf.jpg" class="card-img-top" alt="...">
     <div class="card-body">
       <h5 class="card-title">Carregador turbo 3.1A Original</h5>
       <p class="card-text">Carregador turbo original conector tipo-C.</p>
@@ -40,8 +40,8 @@
     </div>
   </div>
 
-  <div class="card m-lg-2" style="width: 14rem;">
-    <img src="https://i.imgur.com/2iO1pym.jpg" class="card-img-top border border-primary" alt="...">
+  <div class="card" style="width: 16rem;">
+    <img src="https://i.imgur.com/2iO1pym.jpg" class="card-img-top" alt="...">
     <div class="card-body">
       <h5 class="card-title">Carregador turbo 5.1A Original</h5>
       <p class="card-text">Carregador turbo original conector tipo-C.</p>
@@ -50,8 +50,8 @@
     </div>
   </div>
 
-  <div class="card m-lg-2" style="width: 14rem;">
-    <img src="https://i.imgur.com/fsc7NEU.jpg" class="card-img-top border border-primary" alt="...">
+  <div class="card" style="width: 16rem;">
+    <img src="https://i.imgur.com/fsc7NEU.jpg" class="card-img-top" alt="...">
     <div class="card-body">
       <h5 class="card-title">Carregador turbo 9.1A Original</h5>
       <p class="card-text">Carregador turbo original conector tipo-C.</p>
@@ -60,8 +60,8 @@
     </div>
   </div>
 
-  <div class="card m-lg-2" style="width: 14rem;">
-    <img src="https://i.imgur.com/iqjJr98.jpg" class="card-img-top border border-primary" alt="...">
+  <div class="card" style="width: 16rem;">
+    <img src="https://i.imgur.com/iqjJr98.jpg" class="card-img-top" alt="...">
     <div class="card-body">
       <h5 class="card-title">Cabos turbo Original</h5>
       <p class="card-text">Cabos turbo original com conectores: Tipo-C, micro-USB e Lightning(Iphone).</p>
@@ -70,8 +70,8 @@
     </div>
   </div>
 
-  <div class="card m-lg-2" style="width: 14rem;">
-    <img src="https://i.imgur.com/qyFUcLK.jpg" class="card-img-top border border-primary" alt="...">
+  <div class="card" style="width: 16rem;">
+    <img src="https://i.imgur.com/qyFUcLK.jpg" class="card-img-top" alt="...">
     <div class="card-body">
       <h5 class="card-title">Cabo Turbo 3 em 1</h5>
       <p class="card-text">Cabo turbo original com conectores: Tipo-C, micro-USB e Lightning(Iphone).</p>
