--- a/src/app/fone/fone.component.html
+++ b/src/app/fone/fone.component.html
@@ -2,8 +2,8 @@
 
 <section class="d-flex flex-row flex-wrap text-center justify-content-center p-3">
 
-  <div class="card m-lg-2" style="width: 14rem;">
-  <img src="https://i.imgur.com/OnHkDSR.jpg" class="card-img-top border border-primary" alt="...">
+  <div class="card" style="width: 16rem;">
+  <img src="https://i.imgur.com/OnHkDSR.jpg" class="card-img-top" alt="...">
   <div class="card-body">
     <h5 class="card-title">Redmi Airdots s</h5>
     <p class="card-text">Fone Redmi Airdots TWS 5.0 Airdots Wireless Bluetooth.</p>
@@ -12,8 +12,8 @@
   </div>
 </div>
 
-<div class="card m-lg-2" style="width: 14rem;">
-  <img src="https://i.imgur.com/mTlS4vX.jpg" class="card-img-top border border-primary" alt="...">
+<div class="card" style="width: 16rem;">
+  <img src="https://i.imgur.com/mTlS4vX.jpg" class="card-img-top" alt="...">
   <div class="card-body">
     <h5 class="card-title">Fone Bluetooth AirPods 115</h5>
     <p class="card-text">Fone AirPods 115 Wireless excelente, compátivel com android.</p>
@@ -22,8 +22,8 @@
   </div>
 </div>
 
-<div class="card m-lg-2" style="width: 14rem;">
-  <img src="https://i.imgur.com/xfgT2H3.jpg" class="card-img-top border border-primary" alt="...">
+<div class="card" style="width: 16rem;">
+  <img src="https://i.imgur.com/xfgT2H3.jpg" class="card-img-top" alt="...">
   <div class="card-body">
     <h5 class="card-title">Fone Bluetooth 112</h5>
     <p class="card-text">Fone 112 Wireless pequeno simples e elegante.</p>
@@ -32,8 +32,8 @@
   </div>
 </div>
 
-<div class="card m-lg-2" style="width: 14rem;">
-  <img src="https://i.imgur.com/5SfTMUW.jpg" class="card-img-top border border-primary" alt="...">
+<div class="card" style="width: 16rem;">
+  <img src="https://i.imgur.com/5SfTMUW.jpg" class="card-img-top" alt="...">
   <div class="card-body">
     <h5 class="card-title">Fone Bluetooth 117</h5>
     <p class="card-text">Fone 117 Wireless com base carregadora.</p>
@@ -42,8 +42,8 @@
   </div>
 </div>
 
-<div class="card m-lg-2" style="width: 14rem;">
-  <img src="https://i.imgur.com/YqNHRcB.jpg+" class="card-img-top border border-primary" alt="...">
+<div class="card" style="width: 16rem;">
+  <img src="https://i.imgur.com/YqNHRcB.jpg+" class="card-img-top" alt="...">
   <div class="card-body">
     <h5 class="card-title">Fone Bluetooth AirDods 124</h5>
     <p class="card-text">Fone 124 Wireless excelente qualidade.</p>
@@ -52,8 +52,8 @@
   </div>
 </div>
 
-<div class="card m-lg-2" style="width: 14rem;">
-  <img src="https://i.imgur.com/HSbChaV.jpg" class="card-img-top border border-primary" alt="...">
+<div class="card" style="width: 16rem;">
+  <img src="https://i.imgur.com/HSbChaV.jpg" class="card-img-top" alt="...">
   <div class="card-body">
     <h5 class="card-title">Fone Bluetooth 136</h5>
     <p class="card-text">Fone 136 Wireless pequeno simples e elegante.</p>
@@ -62,8 +62,8 @@
   </div>
 </div>
 
-<div class="card m-lg-2" style="width: 14rem;">
-  <img src="https://i.imgur.com/wad3fbI.jpg" class="card-img-top border border-primary" alt="...">
+<div class="card" style="width: 16rem;">
+  <img src="https://i.imgur.com/wad3fbI.jpg" class="card-img-top" alt="...">
   <div class="card-body">
     <h5 class="card-title">Fone Bluetooth JBL</h5>
     <p class="card-text">Fone JBL TWS Bluetooth 5.0 qualidade que só a JBL tem.</p>
@@ -73,8 +73,8 @@
 </div>
 
 
-<div class="card m-lg-2" style="width: 14rem;">
-  <img src="https://i.imgur.com/E3DbMzP.jpg" class="card-img-top border border-primary" alt="...">
+<div class="card" style="width: 16rem;">
+  <img src="https://i.imgur.com/E3DbMzP.jpg" class="card-img-top" alt="...">
   <div class="card-body">
     <h5 class="card-title">Fone Samsung</h5>
     <p class="card-text">Fone de ouvido Samsung com fio ótima qualidade.</p>
@@ -84,8 +84,8 @@
 </div>
 
 
-<div class="card m-lg-2" style="width: 14rem;">
-  <img src="https://i.imgur.com/C5syJJR.jpg" class="card-img-top border border-primary" alt="...">
+<div class="card" style="width: 16rem;">
+  <img src="https://i.imgur.com/C5syJJR.jpg" class="card-img-top" alt="...">
   <div class="card-body">
     <h5 class="card-title">Fone de Ouvido Intra-Auricular</h5>
     <p class="card-text">Fone de ouvido Intra-Auricular ótima qualidade.</p>
