--- a/src/app/outro/outro.component.html
+++ b/src/app/outro/outro.component.html
@@ -1,7 +1,7 @@
 <section class="d-flex flex-row flex-wrap text-center justify-content-center p-3">
 
-  <div class="card m-lg-2" style="width: 14rem;">
-    <img src="https://i.imgur.com/9tdxrEP.jpg" class="card-img-top border border-primary" alt="...">
+  <div class="card" style="width: 20rem;">
+    <img src="https://i.imgur.com/9tdxrEP.jpg" class="card-img-top" alt="...">
     <div class="card-body">
       <h5 class="card-title">Chaveiros de Borracha</h5>
       <p class="card-text">Chaveiros feitos com borracha de alta qualidade excelente acabamento.</p>
