--- a/src/app/fone/fone.component.css
+++ b/src/app/fone/fone.component.css
@@ -1,4 +1,4 @@
-#fone::before{
+/* #fone::before{
   background-image: url(https://i.imgur.com/LaylV7T.png);
   min-height: 993px;
   background-position: center top;
@@ -10,4 +10,25 @@
   left: 0;
   width: 100vw;
   z-index: -1;
+} */
+
+.card-text{
+  flex: 1;
+}
+.card-body{
+  display: flex;
+  flex-direction: column;
+  flex: 1 1 auto;
+  min-height: 1px;
+  padding: 1.25rem;
+}
+.card-img-top{
+  flex-shrink: 0;
+  width: 100%;
+  height: 346px;
+}
+.card{
+    margin-left: 10px;
+    margin-top: 5px;
+    border:solid #007bff 2px;
 }
