--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -8,7 +8,7 @@
       <ul class="navbar-nav">
 
         <li class="nav-item active">
-          <a class="nav-link" href="#">Contato<span class="sr-only"></span></a>
+          <a class="nav-link" routerLink="/contato">Contato<span class="sr-only"></span></a>
         </li>
 
         <li class="nav-item dropdown">
